--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
-
+log_cli = true
+log_level = DEBUG
+log_format = %(asctime)s %(levelname)s [%(module)s.%(funcName)s:%(lineno)d] %(message)s
 python_files = *.py
